half part is complete by pranesh

--- a/index.html
+++ b/index.html
@@ -11,16 +11,61 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <header class="header">
-        <section>
-            <h1>Let’s Help Those Who Are More In Need</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-        <input type="button" value="Donate Now">
+        <section class="header-section">
+            <h1>Let's Help Those Who Are More In Need</h1>
+            <p class="header-discription">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <input class="btn-primary" type="button" value="Donate Now">
         </section>
     </header>
+
+    <!-- Main Part -->
+    <main>
+        <section class="donate-today">
+            <h3 class="dt-heading">Donate Today</h3>
+            <p class="dt-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <!-- Amount -->
+            <div class="amount-part">
+                <input class="amount" type="button" value="100tk">
+                <input class="color-amount" type="button" value="200tk">     
+                <input class="amount" type="button" value="500tk">
+                <input class="amount" type="button" value="1000tk">
+                <input class="amount" type="button" value="2000tk">
+            </div>
+            <input class="input-taka" type="number" name="" id="" placeholder="Other Amount (Taka)">
+            <hr/>
+            <input class="btn-primary" type="button" value="Donate Now">
+
+        </section>
+
+        <!-- Out Donate Plan -->
+        <section class="donate">
+            <h3 class="donate-heading">Our Donate Plan</h3>
+            <p class="donate-discription">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+            <!-- Plan of Cards -->
+            <div class="plans">
+                <div class="plan-1">
+                    <img src="icons/food.png" alt="">
+                    <h4 class="card-heading">Food for a family</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="plan-2">
+                    <img src="icons/shelter.png" alt="">
+                    <h4 class="card-heading">Shelter for a family</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="plan-3">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h4 class="card-heading">Education for a child</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
