80% complete, left part you have to do

--- a/index.html
+++ b/index.html
@@ -65,11 +65,54 @@
                 </div>
             </div>
         </section>
+
+        <!-- Blog First -->
+        <section class="fist-blog">
+            <!-- Left Part -->
+            <div class="blog">
+                <h3 class="blog-header">Their lives depend on your donation</h3>
+                <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                <input class="btn-primary" type="button" value="How to Contribute?">
+            </div>
+            <!-- Right Part -->
+            <img class="blog-img-1" src="images/donation6.jpg" alt="">
+            
+        </section>
+
+        <!-- Blog Second -->
+        <section class="fist-blog">
+            <!-- Left Part -->
+            <img class="blog-img-2" src="images/donation6.jpg" alt="">
+            <!-- Right Part -->
+            <div class="blog">
+                <h3 class="blog-header">Their lives depend on your donation</h3>
+                <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="blog-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                <input class="btn-primary" type="button" value="How to Contribute?">
+            </div>      
+        </section>
+
+        <!-- Get My update -->
+        <section class="update-section">
+            <h2 class="update-heading">Get My Updates</h2>
+            <p class="update-discription">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="update-info">
+                <div class="email-subscribe">
+                    <input class="update-email" type="email" name="" id="" placeholder="Email">
+                <input class="update-subscribe" type="submit" value="Subscribe">
+                </div>
+            </div>
+        </section>
+
     </main>
 
-
-
-
+    <!-- Footer -->
+    <footer>
+        <h2>Be Humble</h2>
+        <p>I’m gonna do it</p>
+        <p>All rights reserved by Pranesh Chowdhury</p>
+    </footer>
 
 </body>
 </html>
