pranesh added the latest updates

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
     <!-- Footer -->
     <footer>
-        <h2>Be Humble</h2>
-        <p>I’m gonna do it</p>
-        <p>All rights reserved by Pranesh Chowdhury</p>
+        <i class="footer-heading">Be Humble</i>
+        <p class="footer-tag">"I'm gonna do it"</p>
+        <p class="footer-tag">Copyright © 2023 Pranesh Chowdhury. All rights reserved.</p>
     </footer>
 
 </body>
